# discord_bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cmds/: admin.py  global.py  langrisser.py  langrisser_query.py
core/: cog.py
services/discord/: api.py  core.py  manager.py
tools/: html_parser.py  log.py
