[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["William Wang <twasawang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
python-dotenv = "0.18.0"
requests = "2.26.0"
beautifulsoup4 = "4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
